# linux-vtpm-tests

./: .gitignore  LICENSE  Makefile.am  README  bootstrap.sh  configure.ac
src/: Makefile.am  vtpmctrl.c
tests/: Makefile.am  common.sh  test_createmany  test_createmany_checkclose  test_no_setlocality  test_server_exit  test_tpm2_createmany_checkclose  test_vtpmctrl
